--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:u6u/ioN5fvAGv4ricYQcRAJzGW9R1yJaO022F4hQbig=
 APP_DEBUG=true
 APP_URL=http://demo.test
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
